--- a/style.css
+++ b/style.css
@@ -70,9 +70,8 @@ body {
 .task {
    border-radius: .25rem;
    padding: .25rem;
-   user-select: none;
-   cursor: grab;
    background-color: whitesmoke;
+   cursor: grab;
 }
 
 .task p {
@@ -105,4 +104,10 @@ body {
    top: -5px;
    left: 50%;
    text-align: center;
+ }
+
+ @media only screen and (max-width: 768px) {
+   #backlogPane {
+      display: none;
+   }
  }
